--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "node": ">=4.0.0"
   },
   "scripts": {
-    "start": "node ./server/app.js",
+    "start": "nodemon ./server/app.js",
     "start:es6": "npx babel-node ./server/app.js",
     "test": "jest",
     "lint": "eslint ./"
@@ -19,7 +19,9 @@
     "cors": "^2.8.5",
     "express": "4.17.1",
     "morgan": "^1.10.0",
+    "mysql": "^2.18.1",
     "mysql2": "^2.2.5",
+    "nodemon": "^2.0.13",
     "sequelize": "^6.3.5"
   },
   "devDependencies": {
@@ -28,9 +30,9 @@
     "@babel/node": "^7.12.13",
     "@babel/preset-react": "^7.12.10",
     "@babel/register": "^7.12.10",
-    "babel-jest": "^26.6.3",
+    "babel-jest": "^27.2.5",
     "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor.git",
-    "jest": "^26.6.3"
+    "jest": "^27.2.5"
   },
   "jest": {
     "testRegex": "((\\.|/*.)(spec))\\.js?$",
